--- a/frontend/app/templates/components/post-tile.hbs
+++ b/frontend/app/templates/components/post-tile.hbs
@@ -1,3 +1,8 @@
 {{yield}}
-{{post.author}}
-{{post.text}}
+<div class="post-box">
+{{log post.data.user_id}}`
+{{#link-to "users" post.user_id}}
+  {{post.author}}
+{{/link-to}}
+  {{post.text}}    
+</div>
