--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 
 body {
   max-width: 100%;
-  background-image: url('images/img_background@2x.jpg');
+  background-image: url('img_background@2x.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
