--- a/frontend/app/templates/users.hbs
+++ b/frontend/app/templates/users.hbs
@@ -1,4 +1,5 @@
 {{outlet}}
-
-{{model.email}}
-{{model.description}}
+<div class="user-profile">
+  <div>{{model.email}}</div>
+  <div>{{model.description}}</div>
+</div>
