--- a/app/views/ember_cli/ember/index.html.erb
+++ b/app/views/ember_cli/ember/index.html.erb
@@ -1,6 +1,7 @@
 
 <%= render_ember_app ember_app do |head, body| %>
   <% head.append do %>
+    <%= stylesheet_link_tag "application" %>
     <%= csrf_meta_tags %>
   <% end %>
 
