--- a/app/views/ember_cli/ember/_sign_out.html.erb
+++ b/app/views/ember_cli/ember/_sign_out.html.erb
@@ -1,1 +1,2 @@
-<%= link_to "Sign Out", "/sessions/new", :method => :delete, :class => "signout-button btn" %>
+<%= link_to image_tag("btn_logout.svg", border: 0,  width: 136, height: 67), "/sessions/new", :method => :delete, :class => "signout-button btn" %>
+
