--- a/frontend/app/templates/users.hbs
+++ b/frontend/app/templates/users.hbs
@@ -1,5 +1,9 @@
 {{outlet}}
+{{#link-to "posts"}}
+  <div class="back-to-posts glyphicon glyphicon-arrow-left"></div>
+{{/link-to}}
 <div class="user-profile">
+<img src="assets/images/img_user.png">
   <div>{{model.email}}</div>
   <div>{{model.description}}</div>
 </div>
