a lot of unsuccessful attempts at styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,13 +37,22 @@ html, body {
 }
 
 .post-box {
-  background-color: white;
-  border-radius: 10%;
-  margin-top: 5%;
+  background-image: url('img_cardBackground.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  /*background-position: center;*/
+  /*position: relative;*/
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  resize: horizontal;
+  /*resize: vertical;*/
+  max-width:30%;
+  max-height:80%;
+  /*margin-top: 5%;*/
   /*margin-bottom: 5%;*/
-  width: 300px;
-  border: solid .5px black;
-  margin-left: 30%;
+  /*margin-left: 30%;*/
 }
 
 .user-profile {
