--- a/frontend/app/templates/components/post-list.hbs
+++ b/frontend/app/templates/components/post-list.hbs
@@ -1,5 +1,5 @@
 {{yield}}
-<div class=post-list>
+<div class="post-list">
   {{#each posts as |post|}}
     {{post-tile
       post=post
@@ -20,4 +20,5 @@
   {{else}}
     <img src="assets/images/btn_compose.png" {{action "createPost"}}>
   {{/if}}  
+  {{!-- {{infinite-scroll-container infiniteModelName='post'}} --}}
 </div>
