--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,36 +23,56 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
 } 
 
-.post-list {
-  overflow: auto;
-  width: 60%;
-  height: 10%;
-}
-
-.post-box {
-  background-image: url('img_cardBackground.png');
+.login-submit {
+  background-image: url('btn_signin.png');
   background-repeat: no-repeat;
   background-size: cover;
-  /*background-position: center;*/
-  /*position: relative;*/
+  background-position: center;
+  /*position: absolute;*/
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  resize: horizontal;
-  /*resize: vertical;*/
-  max-width:30%;
-  max-height:80%;
-  /*margin-top: 5%;*/
-  /*margin-bottom: 5%;*/
-  /*margin-left: 30%;*/
+  border-radius: 20%;
+  /*width: 20%;*/
+  /*height: 200%;*/
+  display: block;
+  overflow: auto;
+  /*max-height: 5%;*/
+  color: white;
+}
+
+.post-list {
+  overflow-y: scroll;
+  position: absolute;
+  /*top: 50%;*/
+  left: 35%;
+  max-height: 100%;
+  /*width: 60%;*/
+  /*height: 10%;*/
+}
+
+.create-post {
+  position: fixed;
+  bottom: 6%;
+  left: 47%;
+  height: 10%;
+}
+
+.post-box {
+  background-color: white;
+  max-width: 70%;
+  margin-top: 3%;
+  padding: 3%;
+  border-radius: 5%;
+
 }
 
 .user-profile {
