--- a/frontend/app/templates/components/post-list.hbs
+++ b/frontend/app/templates/components/post-list.hbs
@@ -10,11 +10,18 @@
   {{#modal-dialog
     translucentOverlay=true
     close="cancelPosting"
+    container-class="new-post-modal"
   }}
     <div>
-      {{textarea value=newPostText}}
+      {{textarea
+        value=newPostText
+        class="new-post"
+        placeholder="What do you want to say?"
+      }}
     </div>
-    <button class="submit-post box-shadow" {{action "savePost"}}>Post</button>
+    <button class="submit-post box-shadow btn" {{action "savePost"}}>
+      Post
+    </button>
   {{/modal-dialog}}
 {{else}}
   <img class="create-post" src="assets/images/btn_compose.png" {{action "createPost"}}>
