--- a/frontend/app/templates/users.hbs
+++ b/frontend/app/templates/users.hbs
@@ -1,8 +1,11 @@
 {{outlet}}
 <div class="user-show">
-  {{#link-to "posts"}}
-    <div class="back-to-posts glyphicon glyphicon-arrow-left"></div>
-  {{/link-to}}
+  <div class="link-wrapper">
+    {{#link-to "posts"}}
+      <div class="back-to-posts glyphicon glyphicon-arrow-left"></div>
+    {{/link-to}}  
+  </div>
+  
   <div class="user-profile">
   <img class="user-image" src="assets/images/img_user.png">
     <div>{{model.email}}</div>
